--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1254,3 +1254,7 @@ msgstr "Habilitar o deshabilitar los complementos de Stremio."
 msgctxt "#30873"
 msgid "Prioritize results in the selected language"
 msgstr ""
+
+msgctxt "#30874"
+msgid "Update Addons"
+msgstr ""
