--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -1238,3 +1238,7 @@ msgstr "Habilita o deshabilita los complementos de Stremio."
 msgctxt "#30873"
 msgid "Prioritize results in the selected language"
 msgstr "Priorizar resultados en el idioma seleccionado"
+
+msgctxt "#30874"
+msgid "Update Addons"
+msgstr "Actualizar Addons"
