--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1254,3 +1254,35 @@ msgstr "Habilitar o deshabilitar los complementos de Stremio."
 msgctxt "#30873"
 msgid "Prioritize results in the selected language"
 msgstr ""
+
+msgctxt "#30874"
+msgid "Transmission password (if required)."
+msgstr ""
+
+msgctxt "#30875"
+msgid "Transmission username (if required)."
+msgstr ""
+
+msgctxt "#30876"
+msgid "Password"
+msgstr ""
+
+msgctxt "#30877"
+msgid "Transmission Configuration"
+msgstr ""
+
+msgctxt "#30878"
+msgid "Enable Transmission torrent client integration."
+msgstr ""
+
+msgctxt "#30879"
+msgid "Path to the folder where Transmission downloads are saved."
+msgstr ""
+
+msgctxt "#30880"
+msgid "Transmission server URL (e.g., http://localhost:9091)."
+msgstr ""
+
+msgctxt "#30881"
+msgid "Download Folder"
+msgstr ""
