--- a/resources/language/Portuguese (Brazil)/strings.po
+++ b/resources/language/Portuguese (Brazil)/strings.po
@@ -304,8 +304,8 @@ msgid "Drop torrent"
 msgstr "Drop torrent"
 
 msgctxt "#30710"
-msgid "Filter TV Shows by Season and Episode"
-msgstr "Filtrar programas de TV por temporada e episódio"
+msgid "Include Season Packs"
+msgstr "Incluir pacotes de temporadas"
 
 msgctxt "#30801"
 msgid "Zilean server address (include port if required)."
