--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -316,8 +316,8 @@ msgid "Drop torrent"
 msgstr "Drop torrent"
 
 msgctxt "#30710"
-msgid "Filter TV Shows by Season and Episode"
-msgstr "Filtrar programas de TV por temporada y episodio"
+msgid "Include Season Packs"
+msgstr "Incluir Packs de Temporadas"
 
 msgctxt "#30711"
 msgid "Torrent Settings"
